# Codebase-Refactoring-RL-Environment

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  evaluate.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: __init__.py  app.py  requirements.txt  rlproj_environment.py  sample_codebase.py  sandbox.py
